src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_confirm_delete_mode.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"               ┌ Confirm Delete ────────────────────────────────┐               "
"               │                                                │               "
"               │ Delete "My Snippet"?                           │               "
"               │                                                │               "
"               │ [Enter] Confirm    [Esc] Cancel                │               "
"               │                                                │               "
"               └────────────────────────────────────────────────┘               "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
