src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_confirm_delete_mode_small_area.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"                                                  "
"  ╭ Confirm Delete ────────────────────────────╮  "
"  │                                            │  "
"  │ Delete "Test"?                             │  "
"  │                                            │  "
"  │ [Enter] Confirm    [Esc] Cancel            │  "
"  │                                            │  "
"  ╰────────────────────────────────────────────╯  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
