src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_confirm_update_mode.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"     ╭ Replace Snippet Query ─────────────────────────────────────────────╮     "
"     │                                                                    │     "
"     │ Replace query for "My Snippet"?                                    │     "
"     │                                                                    │     "
"     │ Old query:                                                         │     "
"     │   .old | keys                                                      │     "
"     │                                                                    │     "
"     │ New query:                                                         │     "
"     │   .new | keys | sort                                               │     "
"     │                                                                    │     "
"     │ Enter Confirm • Esc Cancel                                         │     "
"     ╰────────────────────────────────────────────────────────────────────╯     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
