src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_confirm_update_mode_long_name.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"     ╭ Replace Snippet Query ─────────────────────────────────────────────╮     "
"     │                                                                    │     "
"     │ Replace query for "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA…"?      │     "
"     │                                                                    │     "
"     │ Old query:                                                         │     "
"     │   .old                                                             │     "
"     │                                                                    │     "
"     │ New query:                                                         │     "
"     │   .brand_new_query                                                 │     "
"     │                                                                    │     "
"     │ Enter Confirm • Esc Cancel                                         │     "
"     ╰────────────────────────────────────────────────────────────────────╯     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
