src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_confirm_update_mode_long_name_and_wrapping_queries.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"                                                                                "
"                                                                                "
"                                                                                "
"     ╭ Replace Snippet Query ─────────────────────────────────────────────╮     "
"     │                                                                    │     "
"     │ Replace query for "This is a very long snippet name that s…"?      │     "
"     │                                                                    │     "
"     │ Old query:                                                         │     "
"     │   .data[] | select(.status == "active" and .type == "premium") | {i│     "
"     │   email, created_at, metadata, owner, region}                      │     "
"     │                                                                    │     "
"     │ New query:                                                         │     "
"     │   .items[] | select(.enabled == true and .priority == "high") | {uu│     "
"     │   label, contact, updated_at, tags, group, locale}                 │     "
"     │                                                                    │     "
"     │ Enter Confirm • Esc Cancel                                         │     "
"     ╰────────────────────────────────────────────────────────────────────╯     "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
