src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_create_description_mode_active_full_height.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"╭ Name ────────────────────────────────────────────────────────────────────────╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Query ───────────────────────────────────────────────────────────────────────╮"
"│ .test | keys                                                                 │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"╭ Description (optional) ──────────────────────────────────────────────────────╮"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────────────╮"
"│ Enter Create • Tab Next • Shift+Tab Prev • Esc Cancel                        │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
