src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_create_description_mode_empty.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Name ────────────────────────────────────────────────────────────────────────┐"
"│ My Snippet                                                                   │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Query (from current) ────────────────────────────────────────────────────────┐"
"│ .test | keys                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Description (optional) ──────────────────────────────────────────────────────┐"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"┌──────────────────────────────────────────────────────────────────────────────┐"
"│ [Enter] Save  [Tab] Switch  [Esc] Cancel                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
