src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_create_description_mode_narrow.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"┌ Name ────────────────────────────────┐"
"│ Test                                 │"
"└──────────────────────────────────────┘"
"┌ Query (from current) ────────────────┐"
"│ .test                                │"
"└──────────────────────────────────────┘"
"┌ Description (optional) ──────────────┐"
"│Desc                                  │"
"└──────────────────────────────────────┘"
"                                        "
"                                        "
"                                        "
"┌──────────────────────────────────────┐"
"│ [Enter] Save  [Tab] Switch  [Esc] Can│"
"└──────────────────────────────────────┘"
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
