src/snippets/snapshots/jiq__snippets__snippet_render__snippet_render_tests__snapshot_create_description_mode_small_height_active.snap
---
source: src/snippets/snippet_render_tests.rs
expression: output
---
"╭ New Snippet - Description ───────────────────────────────────────────────────╮"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
